<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2016-present the IoT DC3 original author or authors.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.pnoker</groupId>
        <artifactId>dc3-parent</artifactId>
        <version>2026.4.30</version>
    </parent>

    <name>${project.artifactId}</name>
    <artifactId>iot-dc3</artifactId>
    <packaging>pom</packaging>

    <inceptionYear>2016</inceptionYear>
    <url>https://github.com/pnoker/iot-dc3</url>
    <description>
        IoT DC3 is a fully open-source distributed Internet of Things (IoT) platform built on Spring Cloud.
        It accelerates IoT project development and simplifies IoT device management, providing comprehensive solutions for building robust IoT systems.
        It is AI-ready, enabling seamless integration of AI capabilities for intelligent device connectivity, automation, and data-driven operations.
        All components and code are open-source, ensuring transparency, flexibility, and community-driven innovation.
    </description>

    <developers>
        <developer>
            <id>pnoker</id>
            <name>pnoker</name>
            <email>pnokers@icloud.com</email>
            <roles>
                <role>PMC</role>
            </roles>
            <organization>pnoker.github.io</organization>
            <url>https://github.com/pnoker/iot-dc3</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/pnoker/iot-dc3</url>
        <connection>scm:git:https://github.com/pnoker/iot-dc3.git</connection>
        <developerConnection>scm:git:https://github.com/pnoker/iot-dc3.git</developerConnection>
    </scm>

    <properties>
        <maven.deploy.skip>true</maven.deploy.skip>

        <!-- JDK Version -->
        <java.version>21</java.version>

        <!-- DC3 Version -->
        <dc3.version>2026.4.30</dc3.version>
    </properties>

    <modules>
        <module>dc3-api</module>
        <module>dc3-common</module>
        <module>dc3-center</module>
        <module>dc3-driver</module>
        <module>dc3-gateway</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- DC3 Api Related -->
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-api-auth</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-api-data</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-api-driver</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-api-manager</artifactId>
                <version>${dc3.version}</version>
            </dependency>

            <!-- DC3 Common Related -->
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-api</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-auth</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-constant</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-dal</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-data</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-driver</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-exception</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-facade-api</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-facade-grpc</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-facade-local</artifactId>
                <version>${dc3.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-facade-local-auth</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-facade-local-manager</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-gateway</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-log</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-manager</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-model</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-mqtt</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-postgres</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-public</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-quartz</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-rabbitmq</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-repository</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-resource-registrar</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-thread</artifactId>
                <version>${dc3.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.pnoker</groupId>
                <artifactId>dc3-common-web</artifactId>
                <version>${dc3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-jdk-version</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                    <message>
                                        This project targets Java 21 bytecode (via --release 21).
                                        JDK 21 or newer is required to build.
                                        Current JDK: ${java.version}
                                    </message>
                                </requireJavaVersion>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <!-- You can configure environment variables commonly used in development -->
                <NODE_ENV>dev</NODE_ENV>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>test</id>
            <properties>
                <NODE_ENV>test</NODE_ENV>
            </properties>
        </profile>
        <profile>
            <id>pre</id>
            <properties>
                <NODE_ENV>pre</NODE_ENV>
            </properties>
        </profile>
        <profile>
            <id>pro</id>
            <properties>
                <NODE_ENV>pro</NODE_ENV>
            </properties>
        </profile>
    </profiles>

</project>
